{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 34,
  "lineage": "0e823510-1e0c-5da5-a39b-2e30ea2034c5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongo-db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-03T14:08:09.089-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "mongo-db",
            "name": "mongo-db",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/default",
            "priority": 1000,
            "project": "project-for-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/firewalls/mongo-db",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mongo-db"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "prod-8081",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-03T14:08:08.980-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "prod-8081",
            "name": "prod-8081",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/default",
            "priority": 1000,
            "project": "project-for-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/firewalls/prod-8081",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prod-8081"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo-db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/zones/us-central1-a/disks/mongo-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "mongo-db",
            "instance_id": "1372472525513809366",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "Gin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC23D+MflS/80eWHIpQ7oiDkKYmYLtPu7/MAE1s0Gn7CEDZgobF/D91HrxA/LMB8E1RqOnln4mHVE6IuW8GLBlIV+lZKm0hHTaqp83kIVavphn7wO6OehdS8pWBK4Gv3M968ZzHKeBjChMFliJPqF2FSwVUkFmQNJTOV0TZJ8SfWV6+voVRUqF9OUqQoE3dCMf7106CC+46AZBNdZwAj/Mv1/RQuvM7/TVhAvdzBZmXnfldKXFvh/i9ph4su0Efw97+sCAhcP7gsBxMX6bNtS7eLDIAw8GysVz9LWpAfR2Gerh2MzGoGxYDglwr2ntRT/BoVC2QwIUDdKREDHYutGo3 root@jenkins\n"
            },
            "metadata_fingerprint": "8aW03kQNZDI=",
            "name": "mongo-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.28.222",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/default",
                "network_ip": "10.128.0.24",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/regions/us-central1/subnetworks/default",
                "subnetwork_project": "project-for-terraform"
              }
            ],
            "project": "project-for-terraform",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/zones/us-central1-a/instances/mongo-db",
            "tags": [
              "mongo-db"
            ],
            "tags_fingerprint": "TiwJm6H9fWw=",
            "timeouts": {
            },
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "production",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/zones/us-central1-a/disks/production"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "production",
            "instance_id": "1644943953691925974",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "Gin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC23D+MflS/80eWHIpQ7oiDkKYmYLtPu7/MAE1s0Gn7CEDZgobF/D91HrxA/LMB8E1RqOnln4mHVE6IuW8GLBlIV+lZKm0hHTaqp83kIVavphn7wO6OehdS8pWBK4Gv3M968ZzHKeBjChMFliJPqF2FSwVUkFmQNJTOV0TZJ8SfWV6+voVRUqF9OUqQoE3dCMf7106CC+46AZBNdZwAj/Mv1/RQuvM7/TVhAvdzBZmXnfldKXFvh/i9ph4su0Efw97+sCAhcP7gsBxMX6bNtS7eLDIAw8GysVz9LWpAfR2Gerh2MzGoGxYDglwr2ntRT/BoVC2QwIUDdKREDHYutGo3 root@jenkins\n"
            },
            "metadata_fingerprint": "8aW03kQNZDI=",
            "name": "production",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "146.148.99.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/default",
                "network_ip": "10.128.0.23",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/regions/us-central1/subnetworks/default",
                "subnetwork_project": "project-for-terraform"
              }
            ],
            "project": "project-for-terraform",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/zones/us-central1-a/instances/production",
            "tags": [
              "http-server",
              "prod-8081"
            ],
            "tags_fingerprint": "pnL5HH4m-Dc=",
            "timeouts": {
            },
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}